--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-vue-next": "^0.353.0",
     "pinia": "^2.1.7",
+    "radix-vue": "^1.5.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
